# otonom-renk-siniflandirma-robotu

./: README.md
otonom_baslatma/: CMakeLists.txt  package.xml
otonom_baslatma/launch/: pick_and_place.launch.py
otonom_gorus/: package.xml  setup.cfg  setup.py
otonom_gorus/panda_vision/: color_detector.py
otonom_kontrol/: CMakeLists.txt  package.xml
otonom_kontrol/launch/: controller.launch.py  slider_controller.launch.py
panda_description/urdf/: gazebo.xacro
